rnsc/test_data/integration/error/parser/type_hints/long/trailing_token_recovers.rns
.class @long 100000 unexpected_second_operand ; <- this error shouldn't block next error
unknown_token ; <- this error should be reported as well
